2008-11-01  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valacfgbuilder.vala:
	* vala/valacodevisitor.vala:
	* vala/valamethod.vala:
	* vala/valanullchecker.vala:
	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala:
	* vala/valatokentype.vala:
	* vala/valayieldstatement.vala:
	* gobject/valaccodegenerator.vala:

	Parse yield statements

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala:
	* vala/valasemanticanalyzer.vala:

	Check properties when accessing them

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala:
	* vala/valasemanticanalyzer.vala:

	Set PropertyAccessor.prop property earlier, don't require the
	semantic analyzer to set it

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala:
	* vala/valaformalparameter.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasourcefile.vala:

	Check parameters when checking arguments

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valaformalparameter.vala:
	* vala/valasemanticanalyzer.vala:

	Move parameter checking to FormalParameter.check

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:

	Move default argument processing from code generator to	semantic
	analyzer

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala:

	Add check method to CodeNode class to prepare support for more
	modular semantic analyzer

2008-10-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Generate C switch statements for Vala switch statements where
	possible

2008-10-29  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gdk-2.0/gdk-2.0.metadata:

	Hide gdk_window_add_filter.data

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:

	use ctype GCallback for gtk_action_group_add_radio_actions

	* vapi/gdk-2.0.vapi:
	* vapi/gtk+-2.0.vapi:

	Regenerate bindings
