@@ -26,58 +26,22 @@ using Gee;
 /**
  * Represents a switch selection statement in the C code.
  */
-public class Vala.CCodeSwitchStatement : CCodeStatement {
+public class Vala.CCodeSwitchStatement : CCodeBlock {
 	/**
 	 * The switch expression.
 	 */
 	public CCodeExpression expression { get; set; }
 	
-	private Gee.List<CCodeCaseStatement> case_statements = new ArrayList<CCodeCaseStatement> ();
-	private Gee.List<CCodeStatement> default_statements = new ArrayList<CCodeStatement> ();
-	
 	public CCodeSwitchStatement (CCodeExpression expression) {
 		this.expression = expression;
 	}
 	
-	/**
-	 * Adds the specified case statement to the list of switch sections.
-	 *
-	 * @param case_stmt a case statement
-	 */
-	public void add_case (CCodeCaseStatement case_stmt) {
-		case_statements.add (case_stmt);
-	}
-
-	/**
-	 * Append the specified statement to the default clause.
-	 *
-	 * @param stmt a statement
-	 */
-	public void add_default_statement (CCodeStatement stmt) {
-		default_statements.add (stmt);
-	}
-
 	public override void write (CCodeWriter writer) {
 		writer.write_indent (line);
 		writer.write_string ("switch (");
 		expression.write (writer);
 		writer.write_string (")");
-		writer.write_begin_block ();
-		
-		foreach (CCodeCaseStatement case_stmt in case_statements) {
-			case_stmt.write (writer);
-		}
 
-		if (default_statements.size > 0) {
-			writer.write_indent ();
-			writer.write_string ("default:");
-			writer.write_newline ();
-
-			foreach (CCodeStatement stmt in default_statements) {
-				stmt.write (writer);
-			}
-		}
-
-		writer.write_end_block ();
+		base.write (writer);
 	}
 }
